<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_AxisInputs" Id="{3daeb198-b658-05d1-0531-21f506367459}">
    <Declaration><![CDATA[TYPE ST_AxisInputs :
STRUCT
    bLimitFwd AT %I*: BOOL;
    bLimitBwd AT %I*: BOOL;
    bHomeSensor AT %I*: BOOL; //Reference siganl for homing
    nTempPT100 AT %I*: INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>